Update index.html to reference Image02.png

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </header>
         <!-- Use a relative path for the image -->
         <a href="https://github.com/DanOMearaWD/Crowdfunding_ETL.git" class="image fit">
-            <img src="images/images/Image02.png" alt="Crowdfunding ETL Project" style="width:100%; max-width:600px; height:auto;" />
+            <img src="images/Image02.png" alt="Crowdfunding ETL Project" style="width:100%; max-width:600px; height:auto;" />
         </a>
         <p>The objective of this project is to build an ETL pipeline using Python, Pandas, and regular expressions to extract and transform data related to a crowdfunding platform. The final goal is to load the transformed data into a PostgreSQL database.</p>
         <!-- View Project Button -->
