--- a/index.html
+++ b/index.html
@@ -74,10 +74,11 @@
         <header>
             <h2><a href="https://github.com/dsrumi/Project-4-Machine-Learning.git">Employee Attrition Prediction Using Supervised Machine Learning<br /></a></h2>
         </header>
-     <!-- Image section -->
-<a href="https://github.com/dsrumi/Project-4-Machine-Learning.git">
-    <img src="images/Image03.png" alt="Visualization of Employee Attrition Prediction Project" style="width:80%; max-width:500px; height:auto;" />
+<!-- Image section -->
+<a href="https://github.com/dsrumi/Project-4-Machine-Learning.git" class="center-img">
+    <img src="images/Image03.png" alt="Visualization of Employee Attrition Prediction Project" class="resize-img" />
 </a>
+
 
         <p>This project utilizes supervised machine learning techniques to predict employee attrition based on various factors such as job satisfaction, salary, and department. The model uses classification algorithms like Logistic Regression and Random Forest to predict whether an employee is likely to leave the company. The project demonstrates how machine learning can be applied to solve real-world HR problems.</p>
         
