resized posts to articles

--- a/index.html
+++ b/index.html
@@ -68,58 +68,53 @@
             </ul>
         </article>
 
-<!-- Posts -->
-<!-- Employee Attrition Prediction Project -->
-<section class="posts">
-    <header>
-        <h2><a href="https://github.com/dsrumi/Project-4-Machine-Learning.git">Employee Attrition Prediction Using Supervised Machine Learning<br /></a></h2>
-    </header>
-    <!-- Image section -->
-    <a href="https://github.com/dsrumi/Project-4-Machine-Learning.git" class="center-img">
-        <img src="images/Image03.png" alt="Visualization of Employee Attrition Prediction Project" class="resize-img" />
-    </a>
+<!-- Main -->
+<div id="main">
 
-    <p>This project utilizes supervised machine learning techniques to predict employee attrition based on various factors such as job satisfaction, salary, and department. The model uses classification algorithms like Logistic Regression and Random Forest to predict whether an employee is likely to leave the company. The project demonstrates how machine learning can be applied to solve real-world HR problems.</p>
-    
-    <!-- View Project Button -->
-    <ul class="actions special">
-        <li><a href="https://github.com/dsrumi/Project-4-Machine-Learning.git" class="button">View Project</a></li>
-    </ul>
-</section>
-
-
-    <section class="posts">
-        <!-- Crowdfunding ETL Project -->
-        <article class="article">
-            <header>
-                <h2><a href="https://github.com/DanOMearaWD/Crowdfunding_ETL.git">Crowdfunding ETL Project<br /></a></h2>
-            </header>
-
-            <a href="https://github.com/DanOMearaWD/Crowdfunding_ETL.git" class="image fit">
-                <img src="images/Image02.png" alt="Crowdfunding ETL Project" style="width:100%; max-width:600px; height:auto;" />
-            </a>
-            <p>The objective of this project is to build an ETL pipeline using Python, Pandas, and regular expressions to extract and transform data related to a crowdfunding platform. The final goal is to load the transformed data into a PostgreSQL database.</p>
-
-            <!-- View Project Button -->
-            <ul class="actions special">
-                <li><a href="https://github.com/DanOMearaWD/Crowdfunding_ETL.git" class="button">View Project</a></li>
-            </ul>
-        </article>
-    </section>
-
-    <!-- Data Visualization Project -->
-    <article class="article">
-        <header>
-            <h2><a href="https://github.com/dsrumi/Project-3">Data Visualization Project To Analyze Flu Trends by US States, Age Groups, and Virus Types<br /></a></h2>
+    <!-- Employee Attrition Prediction Project -->
+    <article class="post featured">
+        <header class="major">
+            <h2><a href="https://github.com/dsrumi/Project-4-Machine-Learning.git">Employee Attrition Prediction Using Supervised Machine Learning</a></h2>
+            <p>This project utilizes supervised machine learning techniques to predict employee attrition based on various factors such as job satisfaction, salary, and department...</p>
         </header>
-        <a href="https://github.com/dsrumi/Project-3" class="image fit"><img src="images/pic04.jpg" alt="Flu Trends Data Visualization" /></a>
-        <p>This project develops an interactive data visualization application using Python, Dash, and Plotly to analyze and visualize influenza trends, mortality rates, state activity levels, and virus type distributions. By examining historical data, it aims to identify patterns and correlations that can inform public health decision-making.</p>
-        
-        <!-- View Project Button -->
+        <a href="https://github.com/dsrumi/Project-4-Machine-Learning.git" class="image main">
+            <img src="images/Image03.png" alt="Visualization of Employee Attrition Prediction Project" />
+        </a>
         <ul class="actions special">
-            <li><a href="https://github.com/dsrumi/Project-3" class="button">View Project</a></li>
+            <li><a href="https://github.com/dsrumi/Project-4-Machine-Learning.git" class="button large">View Project</a></li>
         </ul>
     </article>
+
+    <!-- Crowdfunding ETL Project -->
+    <article class="post featured">
+        <header class="major">
+            <h2><a href="https://github.com/DanOMearaWD/Crowdfunding_ETL.git">Crowdfunding ETL Project</a></h2>
+            <p>The objective of this project is to build an ETL pipeline using Python, Pandas, and regular expressions to extract and transform data...</p>
+        </header>
+        <a href="https://github.com/DanOMearaWD/Crowdfunding_ETL.git" class="image main">
+            <img src="images/Image02.png" alt="Crowdfunding ETL Project" />
+        </a>
+        <ul class="actions special">
+            <li><a href="https://github.com/DanOMearaWD/Crowdfunding_ETL.git" class="button large">View Project</a></li>
+        </ul>
+    </article>
+
+    <!-- Data Visualization Project -->
+    <article class="post featured">
+        <header class="major">
+            <h2><a href="https://github.com/dsrumi/Project-3">Data Visualization Project To Analyze Flu Trends by US States, Age Groups, and Virus Types</a></h2>
+            <p>This project develops an interactive data visualization application using Python, Dash, and Plotly to analyze and visualize influenza trends...</p>
+        </header>
+        <a href="https://github.com/dsrumi/Project-3" class="image main">
+            <img src="images/pic04.jpg" alt="Flu Trends Data Visualization" />
+        </a>
+        <ul class="actions special">
+            <li><a href="https://github.com/dsrumi/Project-3" class="button large">View Project</a></li>
+        </ul>
+    </article>
+
+</div>
+
 
     </section>
 
