changed project title font size

--- a/index.html
+++ b/index.html
@@ -56,11 +56,8 @@
         <!-- Featured Post -->
         <article class="post featured">
             <header class="major">
-            
-                <h1><a href="https://github.com/Jeniquef/stock-Analysis_t2">Stock Analysis about American Phone Market<br />
-                </a></h1>
-                <p>This project explores the stock performance of Apple and Samsung during the Covid-19 pandemic, comparing their resilience to other tech companies in the market. It aims to understand how external factors, such as lockdowns and supply chain disruptions, influenced stock prices and investor sentiment.<br />
-                </p>
+                <h1><a href="https://github.com/Jeniquef/stock-Analysis_t2">Stock Analysis about American Phone Market<br /></a></h1>
+                <p>This project explores the stock performance of Apple and Samsung during the Covid-19 pandemic, comparing their resilience to other tech companies in the market. It aims to understand how external factors, such as lockdowns and supply chain disruptions, influenced stock prices and investor sentiment.<br /></p>
             </header>
             <a href="https://github.com/Jeniquef/stock-Analysis_t2" class="image main"><img src="images/Image01.png" alt="Stock Analysis about Apple and Samsung" /></a>
             <ul class="actions special">
@@ -68,55 +65,49 @@
             </ul>
         </article>
 
-<!-- Main -->
-<div id="main">
+        <!-- Employee Attrition Prediction Project -->
+        <article class="post featured">
+            <header class="major">
+                <h2><a href="https://github.com/dsrumi/Project-4-Machine-Learning.git">Employee Attrition Prediction Using Supervised Machine Learning<br /></a></h2>
+                <p>This project builds a supervised machine learning model to predict employee attrition using the IBM HR Analytics dataset. It focuses on leveraging advanced data visualization to interpret model results and provide actionable insights for reducing turnover. By identifying factors that contribute to attrition, HR departments can implement targeted retention strategies, improving overall organizational performance.</p>
+            </header>
+            <a href="https://github.com/dsrumi/Project-4-Machine-Learning.git" class="image main">
+                <img src="images/Image03.png" alt="Visualization of Employee Attrition Prediction Project" />
+            </a>
+            <ul class="actions special">
+                <li><a href="https://github.com/dsrumi/Project-4-Machine-Learning.git" class="button large">View Project</a></li>
+            </ul>
+        </article>
 
-    <!-- Employee Attrition Prediction Project -->
-    <article class="post featured">
-        <header class="major">
-            <h2><a href="https://github.com/dsrumi/Project-4-Machine-Learning.git">Employee Attrition Prediction Using Supervised Machine Learning</a></h2>
-            <p>This project utilizes supervised machine learning techniques to predict employee attrition based on various factors such as job satisfaction, salary, and department...</p>
-        </header>
-        <a href="https://github.com/dsrumi/Project-4-Machine-Learning.git" class="image main">
-            <img src="images/Image03.png" alt="Visualization of Employee Attrition Prediction Project" />
-        </a>
-        <ul class="actions special">
-            <li><a href="https://github.com/dsrumi/Project-4-Machine-Learning.git" class="button large">View Project</a></li>
-        </ul>
-    </article>
+        <!-- Crowdfunding ETL Project -->
+        <article class="post featured">
+            <header class="major">
+                <h2><a href="https://github.com/DanOMearaWD/Crowdfunding_ETL.git">Crowdfunding ETL Project</a></h2>
+                <p>The objective of this project is to build an ETL pipeline using Python, Pandas, and regular expressions to extract and transform data related to a crowdfunding platform. The final goal is to load the transformed data into a PostgreSQL database.</p>
+            </header>
+            <a href="https://github.com/DanOMearaWD/Crowdfunding_ETL.git" class="image main">
+                <img src="images/Image02.png" alt="Crowdfunding ETL Project" />
+            </a>
+            <ul class="actions special">
+                <li><a href="https://github.com/DanOMearaWD/Crowdfunding_ETL.git" class="button large">View Project</a></li>
+            </ul>
+        </article>
 
-    <!-- Crowdfunding ETL Project -->
-    <article class="post featured">
-        <header class="major">
-            <h2><a href="https://github.com/DanOMearaWD/Crowdfunding_ETL.git">Crowdfunding ETL Project</a></h2>
-            <p>The objective of this project is to build an ETL pipeline using Python, Pandas, and regular expressions to extract and transform data...</p>
-        </header>
-        <a href="https://github.com/DanOMearaWD/Crowdfunding_ETL.git" class="image main">
-            <img src="images/Image02.png" alt="Crowdfunding ETL Project" />
-        </a>
-        <ul class="actions special">
-            <li><a href="https://github.com/DanOMearaWD/Crowdfunding_ETL.git" class="button large">View Project</a></li>
-        </ul>
-    </article>
+        <!-- Data Visualization Project -->
+        <article class="post featured">
+            <header class="major">
+                <h2><a href="https://github.com/dsrumi/Project-3">Data Visualization Project To Analyze Flu Trends by US States, Age Groups, and Virus Types</a></h2>
+                <p>This project aims to create an interactive data visualization application using Python, specifically with Dash and Plotly. This project will analyze and visualize influenza trends, mortality rates, state-wise activity levels, and virus type distributions using historical data. The project will help identify key patterns, anomalies, and correlations that could inform public health decision-making</p>
+            </header>
+            <a href="https://github.com/dsrumi/Project-3" class="image main">
+                <img src="images/pic04.jpg" alt="Flu Trends Data Visualization" />
+            </a>
+            <ul class="actions special">
+                <li><a href="https://github.com/dsrumi/Project-3" class="button large">View Project</a></li>
+            </ul>
+        </article>
 
-    <!-- Data Visualization Project -->
-    <article class="post featured">
-        <header class="major">
-            <h2><a href="https://github.com/dsrumi/Project-3">Data Visualization Project To Analyze Flu Trends by US States, Age Groups, and Virus Types</a></h2>
-            <p>This project develops an interactive data visualization application using Python, Dash, and Plotly to analyze and visualize influenza trends...</p>
-        </header>
-        <a href="https://github.com/dsrumi/Project-3" class="image main">
-            <img src="images/pic04.jpg" alt="Flu Trends Data Visualization" />
-        </a>
-        <ul class="actions special">
-            <li><a href="https://github.com/dsrumi/Project-3" class="button large">View Project</a></li>
-        </ul>
-    </article>
-
-</div>
-
-
-    </section>
+    </div>
 
     <section class="split contact">
         <section class="alt">
@@ -134,17 +125,15 @@
         </section>
         <section>
             <h3>Social</h3>
-        <ul class="icons alt">
-            <!-- LinkedIn Icon -->
-            <li><a href="https://www.linkedin.com/in/anthony-lopez-b3407a239/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+            <ul class="icons alt">
+                <!-- LinkedIn Icon -->
+                <li><a href="https://www.linkedin.com/in/anthony-lopez-b3407a239/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 
-            <!-- GitHub Icon -->
-            <li><a href="https://github.com/anthonylopez1109/my-portfolio.git" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-        </ul>
-
+                <!-- GitHub Icon -->
+                <li><a href="https://github.com/anthonylopez1109/my-portfolio.git" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+            </ul>
         </section>
     </section>
-    </footer>
 
     <!-- Copyright -->
     <div id="copyright">
