--- a/index.html
+++ b/index.html
@@ -91,21 +91,20 @@
             <ul class="actions special">
                 <li><a href="https://github.com/DanOMearaWD/Crowdfunding_ETL.git" class="button large">View Project</a></li>
             </ul>
-        </article>
-
         <!-- Data Visualization Project -->
-        <article class="post featured">
-            <header class="major">
-                <h2><a href="https://github.com/dsrumi/Project-3">Data Visualization Project To Analyze Flu Trends by US States, Age Groups, and Virus Types</a></h2>
-                <p>This project aims to create an interactive data visualization application using Python, specifically with Dash and Plotly. This project will analyze and visualize influenza trends, mortality rates, state-wise activity levels, and virus type distributions using historical data. The project will help identify key patterns, anomalies, and correlations that could inform public health decision-making</p>
-            </header>
-            <a href="https://github.com/dsrumi/Project-3" class="image main">
-                <img src="images/pic04.jpg" alt="Flu Trends Data Visualization" />
-            </a>
-            <ul class="actions special">
-                <li><a href="https://github.com/dsrumi/Project-3" class="button large">View Project</a></li>
-            </ul>
-        </article>
+<article class="post featured">
+    <header class="major">
+        <h2><a href="https://github.com/dsrumi/Project-3">Data Visualization Project To Analyze Flu Trends by US States, Age Groups, and Virus Types</a></h2>
+        <p>This project aims to create an interactive data visualization application using Python, specifically with Dash and Plotly. This project will analyze and visualize influenza trends, mortality rates, state-wise activity levels, and virus type distributions using historical data. The project will help identify key patterns, anomalies, and correlations that could inform public health decision-making</p>
+    </header>
+    <a href="https://github.com/dsrumi/Project-3" class="image main">
+        <img src="images/Image04.png" alt="Flu Trends Data Visualization" />
+    </a>
+    <ul class="actions special">
+        <li><a href="https://github.com/dsrumi/Project-3" class="button large">View Project</a></li>
+    </ul>
+</article>
+
 
     </div>
 
