spaced out projects

--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
             <ul class="actions special">
                 <li><a href="https://github.com/DanOMearaWD/Crowdfunding_ETL.git" class="button large">View Project</a></li>
             </ul>
+		</article>
+			
         <!-- Data Visualization Project -->
 <article class="post featured">
     <header class="major">
